src/tests/snapshots/jsssa__tests__parse__parse error immediate.snap
---
source: src/tests/parse.rs
expression: err
---
Parse error: TS1109
 --> <anon>:1:1
  |
1 | *
  | ^

error: Unexpected token None
 --> <anon>:1:1
  |
1 | *
  | ^


